Added configurations